# opengl_linking

./: .gitmodules  CMakeLists.txt  CMakelists.txt  README.md  main.cpp
